--- a/apropos.html
+++ b/apropos.html
@@ -20,7 +20,7 @@
       </div>
       <div class="header-right">
         <div class="header-contact">
-          <span class="header-contact-phone">(819) 921-4333</span>
+          <span class="header-contact-phone">+1 (819) 921-4333</span>
           <a href="mailto:simon@prosimconstruction.com" class="header-contact-email">simon@prosimconstruction.com</a>
         </div>
         <div class="header-menu-wrapper">
@@ -33,6 +33,8 @@
         <li><a href="services.html">Services</a></li>
         <li><a href="galerie.html">Galerie</a></li>
         <li><a href="contact.html">Contact</a></li>
+        <li><a href="en/about.html" class="lang-switch">English</a></li>
+        <li><a href="uk/about.html" class="lang-switch">Українська</a></li>
           </ul>
         </div>
       </div>
@@ -45,42 +47,77 @@
   </nav>
 
   <main>
-    <header class="page-header">
-      <div class="container">
-        <p class="page-kicker">Travaux après-sinistre et rénovations</p>
-        <h1>À propos de Prosim Construction</h1>
-      </div>
-    </header>
 
     <section class="section">
       <div class="container about-layout">
         <div class="about-text">
           <p>
-            Prosim Construction est une entreprise de la région de l’Outaouais spécialisée dans la rénovation
-            et les travaux après-sinistre. L’entreprise se distingue par sa rigueur, la qualité de son travail et
-            l’accompagnement offert à chaque client, du premier appel jusqu’à la fin du chantier.
+            PROSIM (9295-9766 Québec Inc.) est une entreprise qui se spécialise dans la 
+            rénovation en Outaouais et qui offrent des services d’après-sinistre. L’entreprise 
+            a été fondée en février 2014 par monsieur Simon Brûlé, un jeune entrepreneur, diplômé en 
+            gestion et comptabilité et possédant déjà plusieurs années d’expérience dans 
+            le domaine de la construction.
           </p>
           <p>
-            Notre équipe prend en charge les projets résidentiels, commerciaux et industriels. Nous coordonnons
-            toutes les étapes&nbsp;: démolition, reconstruction, finition intérieure et nettoyage après-sinistre.
-          </p>
+            L’entreprise se fait rapidement remarquée grâce à la passion et à la rigueur de ses 
+            employés, par la qualité de ses services ainsi que le degré de satisfaction de ses clients qui ont 
+            contribués à bâtir une réputation enviable.
           <p>
-            Notre mission est de remettre vos espaces en état rapidement, en respectant les normes, les délais
-            et la tranquillité des occupants.
+            En septembre 2014, Prosim se spécialise dans le domaine de la construction après-sinistre. 
+            En novembre 2014, un assureur en fait son partenaire en reconstruction pour leurs dossiers 
+            de la région de l’Outaouais. D’autres assureurs lui confient ensuite des dossiers via 
+            leurs assurés et leurs experts en sinistre.
           </p>
+          <p>Depuis, l'entreprise a mis sur pied plusieurs équipes dans le but de servir notre clientèle. 
+            Un local de 1500 pi2 nous sert d'entrepôt et de bureau depuis septembre 2015.</p>
+            <p>La mission de l'entreprise est fondée sur l'empathie, la communication, le souci 
+              de la performance et la disponibilité.</p>
+            
+            <div class="certifications">
+              <div class="certifications-logos">
+                <div class="cert-logo">
+                  <img src="images/logos/apchq-logo.png" alt="APCHA" />
+                  <p class="cert-name">APCHQ</p>
+                  <p class="cert-desc">Association provinciale des constructeurs d'habitations du Québec Inc.</p>
+                </div>
+                <div class="cert-logo">
+                  <img src="images/logos/ccq-logo.png" alt="Commission de la Construction du Québec" />
+                  <p class="cert-name">Commission de la Construction du Québec</p>
+                </div>
+                <div class="cert-logo">
+                  <img src="images/logos/iicrc-logo.png" alt="IICRC Certified" />
+                  <p class="cert-name">IICRC Certified</p>
+                </div>
+                <div class="cert-logo">
+                  <img src="images/logos/rbq-logo.png" alt="Régie du bâtiment Québec" />
+                  <p class="cert-name">Régie du bâtiment Québec</p>
+                </div>
+              </div>
+            </div>
         </div>
         <aside class="about-side">
-          <h2>Services pour assureurs</h2>
+          <h2>Voici les services que Prosim Construction offre aux assureurs:</h2>
           <ul class="bullet-list">
             <li>Reconstruction et rénovation après-sinistre</li>
-            <li>Barricadage et protection des lieux</li>
+            <li>Barricadage</li>
             <li>Démolition</li>
-            <li>Décontamination et nettoyage</li>
-            <li>Service d’urgence 24 h / 365 jours</li>
+            <li>Protection des lieux</li>
+            <li>Décontamination</li>
+            <li>Nettoyage après-sinistre</li>
+            <li>Service d’urgence 24 heures / 365 jours</li>
             <li>Recherche de causes</li>
+            <li>Nous desservons le territoire de Gatineau et ses environs dans un rayon de 75 kilomètres.</li>
+            <li>Après-sinistre & rénovation</li>
           </ul>
           <p class="small">
-            Territoire desservi&nbsp;: Gatineau et environs (rayon de 75 km).
+            Prosim Construction utilise les programmes d’évaluation Xactimate et Simbility.
+            Le support technique de l’entreprise permet un ajustement rapide à toute forme de logiciels 
+qui pourraient être nécessaire à la communication et l’estimation des travaux avec ses partenaires.
+
+L’objectif de Prosim est de compléter les travaux à la satisfaction des clients, selon 
+les normes et attentes, dans un délai respectueux des occupants.
+
+
           </p>
         </aside>
       </div>
@@ -89,11 +126,21 @@
 
   <footer class="footer">
     <div class="container footer-inner">
-      <div class="footer-left">
-        <p>Prosim © 2025 | Tous droits réservés.</p>
+      <div class="footer-logo-section">
+        <div class="footer-logo-wrapper">
+          <a href="index.html" class="footer-logo"><span class="logo-pro">PR</span><span class="logo-o">O</span><span class="logo-sim">SIM</span></a>
+        </div>
+        <p class="footer-tagline">Après-sinistre et rénovation</p>
       </div>
-      <div class="footer-right">
+      <div class="footer-rbq">
         <p>RBQ: 5682‑7538‑01</p>
+      </div>
+      <div class="footer-divider"></div>
+      <div class="footer-bottom">
+        <p>
+          <span class="footer-brand">Prosim</span> © 2025 | 
+          <span class="footer-text">Tous droits réservés. Développé par Anton Stryzhavchuk</span>
+        </p>
       </div>
     </div>
   </footer>
