--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
       </div>
       <div class="header-right">
         <div class="header-contact">
-          <span class="header-contact-phone">(819) 921-4333</span>
+          <span class="header-contact-phone">+1 (819) 921-4333</span>
           <a href="mailto:simon@prosimconstruction.com" class="header-contact-email">simon@prosimconstruction.com</a>
         </div>
         <div class="header-menu-wrapper">
@@ -33,6 +33,8 @@
         <li><a href="services.html">Services</a></li>
         <li><a href="galerie.html">Galerie</a></li>
         <li><a href="contact.html" class="active">Contact</a></li>
+        <li><a href="en/contact.html" class="lang-switch">English</a></li>
+        <li><a href="uk/contact.html" class="lang-switch">Українська</a></li>
           </ul>
         </div>
       </div>
@@ -45,22 +47,19 @@
   </nav>
 
   <main>
-    <header class="page-header">
-      <div class="container">
-        <p class="page-kicker">Une question ou un projet?</p>
-        <h1>Contactez Prosim Construction</h1>
-      </div>
-    </header>
 
     <section class="section">
       <div class="container contact-layout">
         <div class="contact-info">
           <h2>Coordonnées</h2>
-          <p><strong>Téléphone&nbsp;:</strong> (819) 921-4333</p>
+          <p><strong>Téléphone&nbsp;:</strong> +1 (819) 921-4333</p>
           <p><strong>Courriel&nbsp;:</strong> <a href="mailto:simon@prosimconstruction.com">simon@prosimconstruction.com</a></p>
           <p class="small">
             Prosim dessert la région de Gatineau et ses environs pour les travaux après-sinistre et de rénovation.
           </p>
+          <p>19-1 rue de la Place-de-Templeton</p>
+          <p>Gatineau, Québec</p>
+          <p>J8R 3Y5</p>
         </div>
         <form class="contact-form">
           <div class="field">
@@ -90,11 +89,21 @@
 
   <footer class="footer">
     <div class="container footer-inner">
-      <div class="footer-left">
-        <p>Prosim © 2025 | Tous droits réservés.</p>
+      <div class="footer-logo-section">
+        <div class="footer-logo-wrapper">
+          <a href="index.html" class="footer-logo"><span class="logo-pro">PR</span><span class="logo-o">O</span><span class="logo-sim">SIM</span></a>
+        </div>
+        <p class="footer-tagline">Après-sinistre et rénovation</p>
       </div>
-      <div class="footer-right">
+      <div class="footer-rbq">
         <p>RBQ: 5682‑7538‑01</p>
+      </div>
+      <div class="footer-divider"></div>
+      <div class="footer-bottom">
+        <p>
+          <span class="footer-brand">Prosim</span> © 2025 | 
+          <span class="footer-text">Tous droits réservés. Développé par Anton Stryzhavchuk</span>
+        </p>
       </div>
     </div>
   </footer>
