--- a/en/about.html
+++ b/en/about.html
@@ -20,7 +20,7 @@
       </div>
       <div class="header-right">
         <div class="header-contact">
-          <span class="header-contact-phone">(819) 921-4333</span>
+          <span class="header-contact-phone">+1 (819) 921-4333</span>
           <a href="mailto:simon@prosimconstruction.com" class="header-contact-email">simon@prosimconstruction.com</a>
         </div>
         <div class="header-menu-wrapper">
@@ -33,7 +33,8 @@
         <li><a href="services.html">Services</a></li>
         <li><a href="gallery.html">Gallery</a></li>
         <li><a href="contact.html">Contact</a></li>
-        <li><a href="../index.html" class="lang-switch">Français</a></li>
+        <li><a href="../apropos.html" class="lang-switch">Français</a></li>
+        <li><a href="../uk/about.html" class="lang-switch">Українська</a></li>
           </ul>
         </div>
       </div>
@@ -46,42 +47,75 @@
   </nav>
 
   <main>
-    <header class="page-header">
-      <div class="container">
-        <p class="page-kicker">Post-disaster work and renovations</p>
-        <h1>About Prosim Construction</h1>
-      </div>
-    </header>
-
     <section class="section">
       <div class="container about-layout">
         <div class="about-text">
           <p>
-            Prosim Construction is a company in the Outaouais region specializing in renovation
-            and post-disaster work. The company stands out for its rigor, quality of work and
-            support offered to each client, from the first call until the end of the project.
+            PROSIM (9295-9766 Québec Inc.), a company specializing in home renovation in
+             the Outaouais region, also offers disaster recovery services. The company was 
+             founded in 2014 by Simon Brûlé, a young entrepreneur with a degree in 
+              management and accounting, who already had several years of experience in the 
+              construction sector.
           </p>
           <p>
-            Our team handles residential, commercial and industrial projects. We coordinate
-            all stages: demolition, reconstruction, interior finishing and post-disaster cleanup.
+            Prosim quickly attracted notice thanks to the passion and conscientiousness of its employees, 
+            the quality of its services and the level of satisfaction of its clients, who helped it 
+            build an enviable reputation.
           </p>
           <p>
-            Our mission is to restore your spaces quickly, while respecting standards, deadlines
-            and the peace of mind of occupants.
+            In September 2014, Prosim began to specialize in the area of disaster recovery construction. 
+            In November 2014, an insurance company created a partnership with Prosim for its clients needing 
+            reconstruction work in the Outaouais region. Following that, other insurance companies referred 
+            cases through their policyholders and claims adjuster.
           </p>
+            <p>Since then, the company has established several teams, with an eye to serving our different client bases. 
+            A 1,500-square-foot building has served as warehouse and office since September 2015.</p>
+            <p>The company's mission is based on empathy, communication, a commitment to performance and availability.</p>
+            
+            <div class="certifications">
+              <div class="certifications-logos">
+                <div class="cert-logo">
+                  <img src="../images/logos/apchq-logo.png" alt="APCHA" />
+                  <p class="cert-name">Provincial Association of Home Builders of Quebec Inc.</p>
+                  
+                </div>
+                <div class="cert-logo">
+                  <img src="../images/logos/ccq-logo.png" alt="Commission de la Construction du Québec" />
+                  <p class="cert-name">Quebec Construction Commission</p>
+                </div>
+                <div class="cert-logo">
+                  <img src="../images/logos/iicrc-logo.png" alt="IICRC Certified" />
+                  <p class="cert-name">IICRC Certified</p>
+                </div>
+                <div class="cert-logo">
+                  <img src="../images/logos/rbq-logo.png" alt="Régie du bâtiment Québec" />
+                  <p class="cert-name">Quebec Building Authority</p>
+                </div>
+              </div>
+            </div>
         </div>
         <aside class="about-side">
-          <h2>Services for insurers</h2>
+          <h2>Here are the services that Prosim Construction offers policyholders:</h2>
           <ul class="bullet-list">
-            <li>Post-disaster reconstruction and renovation</li>
-            <li>Barricading and site protection</li>
+            <li>Disaster recovery reconstruction and remodeling</li>
+            <li>Boarding-up</li>
             <li>Demolition</li>
-            <li>Decontamination and cleanup</li>
-            <li>24/7 Emergency service</li>
-            <li>Cause investigation</li>
+            <li>Protection of premises</li>
+            <li>Decontamination</li>
+            <li>Post-disaster cleanup</li>
+            <li>24/7 year-round emergency service</li>
+            <li>Searching for causes</li>
+            <li>Serving Gatineau and surrounding area, within a 75-kilometre radius.</li>
+            <li>Disaster recovery & remodeling</li>
           </ul>
           <p class="small">
-            Service area: Gatineau and surrounding areas (75 km radius).
+            Prosim Construction uses the Xactimate and Symbility estimating programs.
+
+The company’s technical support staff allows it to quickly adjust to any type of software 
+that might be needed for estimating work and communicating information to its partners.
+
+Prosim’s goal is to complete work to the satisfaction of its clients while complying with standards, 
+meeting expectations, and respecting the time constraints of the building’s occupants.
           </p>
         </aside>
       </div>
@@ -90,11 +124,21 @@
 
   <footer class="footer">
     <div class="container footer-inner">
-      <div class="footer-left">
-        <p>Prosim © 2025 | All rights reserved.</p>
+      <div class="footer-logo-section">
+        <div class="footer-logo-wrapper">
+          <a href="index.html" class="footer-logo"><span class="logo-pro">PR</span><span class="logo-o">O</span><span class="logo-sim">SIM</span></a>
+        </div>
+        <p class="footer-tagline">Post-disaster and renovation</p>
       </div>
-      <div class="footer-right">
+      <div class="footer-rbq">
         <p>RBQ: 5682‑7538‑01</p>
+      </div>
+      <div class="footer-divider"></div>
+      <div class="footer-bottom">
+        <p>
+          <span class="footer-brand">Prosim</span> © 2025 | 
+          <span class="footer-text">All rights reserved. Developed by Anton Stryzhavchuk</span>
+        </p>
       </div>
     </div>
   </footer>
