--- a/en/index.html
+++ b/en/index.html
@@ -20,7 +20,7 @@
       </div>
       <div class="header-right">
         <div class="header-contact">
-          <span class="header-contact-phone">(819) 921-4333</span>
+          <span class="header-contact-phone">+1 (819) 921-4333</span>
           <a href="mailto:simon@prosimconstruction.com" class="header-contact-email">simon@prosimconstruction.com</a>
         </div>
         <div class="header-menu-wrapper">
@@ -34,6 +34,7 @@
         <li><a href="gallery.html">Gallery</a></li>
         <li><a href="contact.html">Contact</a></li>
         <li><a href="../index.html" class="lang-switch">Français</a></li>
+        <li><a href="../uk/index.html" class="lang-switch">Українська</a></li>
           </ul>
         </div>
       </div>
@@ -146,12 +147,21 @@
 
   <footer class="footer">
     <div class="container footer-inner">
-      <div class="footer-left">
-        <p>Prosim © 2025 | All rights reserved.</p>
-        <p>Post-disaster work and renovations in Gatineau and Outaouais.</p>
+      <div class="footer-logo-section">
+        <div class="footer-logo-wrapper">
+          <a href="index.html" class="footer-logo"><span class="logo-pro">PR</span><span class="logo-o">O</span><span class="logo-sim">SIM</span></a>
+        </div>
+        <p class="footer-tagline">Post-disaster and renovation</p>
       </div>
-      <div class="footer-right">
+      <div class="footer-rbq">
         <p>RBQ: 5682‑7538‑01</p>
+      </div>
+      <div class="footer-divider"></div>
+      <div class="footer-bottom">
+        <p>
+          <span class="footer-brand">Prosim</span> © 2025 | 
+          <span class="footer-text">All rights reserved. Developed by Anton Stryzhavchuk</span>
+        </p>
       </div>
     </div>
   </footer>
