--- a/uk/services.html
+++ b/uk/services.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Services - Prosim</title>
+  <title>Послуги - Prosim</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&family=Stencil&display=swap" rel="stylesheet">
@@ -16,7 +16,7 @@
         <div class="header-logo-wrapper">
           <a href="index.html" class="logo"><span class="logo-pro">PR</span><span class="logo-o">O</span><span class="logo-sim">SIM</span></a>
         </div>
-        <p class="logo-tagline">Post-disaster and renovation</p>
+        <p class="logo-tagline">Після аварії та ремонт</p>
       </div>
       <div class="header-right">
         <div class="header-contact">
@@ -28,13 +28,13 @@
             <span></span><span></span><span></span>
           </button>
           <ul class="nav-links">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="services.html" class="active">Services</a></li>
-        <li><a href="gallery.html">Gallery</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a href="index.html">Головна</a></li>
+        <li><a href="about.html">Про нас</a></li>
+        <li><a href="services.html" class="active">Послуги</a></li>
+        <li><a href="gallery.html">Галерея</a></li>
+        <li><a href="contact.html">Контакти</a></li>
         <li><a href="../services.html" class="lang-switch">Français</a></li>
-        <li><a href="../uk/services.html" class="lang-switch">Українська</a></li>
+        <li><a href="../en/services.html" class="lang-switch">English</a></li>
           </ul>
         </div>
       </div>
@@ -50,49 +50,49 @@
 
     <section class="section">
       <div class="container">
-        <h2>Post-Disaster</h2>
+        <h2>Після аварії</h2>
         <div class="service-group">
           <article class="service" id="post-disaster">
-            <h3>Post-disaster reconstruction and renovation</h3>
+            <h3>Реконструкція та ремонт після аварії</h3>
             <p>
-              Water damage, fire or other damage: we coordinate all stages to restore your
-              spaces, from structure to finishing.
+              Збитки від води, пожежі або інші пошкодження: ми координуємо всі етапи для відновлення ваших
+              приміщень, від структури до оздоблення.
             </p>
           </article>
           <article class="service">
-            <h3>Post-disaster cleanup and decontamination</h3>
+            <h3>Прибирання після аварії та деконтамінація</h3>
             <p>
-              Complete site cleanup and treatment of possible contaminants (mold, smoke, etc.).
+              Повне прибирання приміщень та обробка можливих забруднень (пліснява, дим тощо).
             </p>
           </article>
           <article class="service">
-            <h3>Barricading</h3>
+            <h3>Загородження</h3>
             <p>
-              Rapid protection of openings after vandalism, fire or breakage to secure the premises.
+              Швидкий захист отворів після вандалізму, пожежі або поломки для забезпечення безпеки приміщень.
             </p>
           </article>
           <article class="service">
-            <h3>Demolition</h3>
+            <h3>Демонтаж</h3>
             <p>
-              Partial or complete demolition performed in a controlled manner to prepare for reconstruction.
+              Частковий або повний демонтаж, виконаний контрольованим способом для підготовки до реконструкції.
             </p>
           </article>
           <article class="service">
-            <h3>Site protection</h3>
+            <h3>Захист приміщень</h3>
             <p>
-              Securing the building and your belongings before and during work.
+              Забезпечення безпеки будівлі та ваших речей до та під час робіт.
             </p>
           </article>
           <article class="service">
-            <h3>24/7 Emergency service</h3>
+            <h3>Служба екстреної допомоги 24/7</h3>
             <p>
-              Assistance at any time to limit damage and start work quickly.
+              Допомога в будь-який час для обмеження збитків та швидкого початку робіт.
             </p>
           </article>
           <article class="service">
-            <h3>Cause investigation</h3>
+            <h3>Розслідування причин</h3>
             <p>
-              Situation analysis to identify the origin of the disaster and propose the right corrections.
+              Аналіз ситуації для визначення походження аварії та пропозиції правильних виправлень.
             </p>
           </article>
         </div>
@@ -101,30 +101,30 @@
 
     <section class="section section-alt">
       <div class="container">
-        <h2>Renovation</h2>
+        <h2>Ремонт</h2>
         <div class="service-group">
           <article class="service" id="kitchen">
-            <h3>Kitchen</h3>
+            <h3>Кухня</h3>
             <p>
-              Design and renovation of functional, bright kitchens adapted to your needs.
+              Проектування та ремонт функціональних, світлих кухонь, адаптованих до ваших потреб.
             </p>
           </article>
           <article class="service" id="basement">
-            <h3>Basement finishing</h3>
+            <h3>Оздоблення підвалу</h3>
             <p>
-              Complete development of your basement to create a family room, office or living space.
+              Повне облаштування вашого підвалу для створення сімейної кімнати, офісу або житлового простору.
             </p>
           </article>
           <article class="service" id="interior-renovations">
-            <h3>Interior renovations</h3>
+            <h3>Внутрішні ремонти</h3>
             <p>
-              Painting, flooring and general property upgrades.
+              Роботи з фарбування, підлоги та загальне оновлення вашої власності.
             </p>
           </article>
           <article class="service" id="patio">
-            <h3>Patio construction</h3>
+            <h3>Будівництво тераси</h3>
             <p>
-              Patios and terraces to fully enjoy summer at home.
+              Тераси та патіо для повного насолодження літом вдома.
             </p>
           </article>
         </div>
@@ -138,7 +138,7 @@
         <div class="footer-logo-wrapper">
           <a href="index.html" class="footer-logo"><span class="logo-pro">PR</span><span class="logo-o">O</span><span class="logo-sim">SIM</span></a>
         </div>
-        <p class="footer-tagline">Post-disaster and renovation</p>
+        <p class="footer-tagline">Після аварії та ремонт</p>
       </div>
       <div class="footer-rbq">
         <p>RBQ: 5682‑7538‑01</p>
@@ -147,7 +147,7 @@
       <div class="footer-bottom">
         <p>
           <span class="footer-brand">Prosim</span> © 2025 | 
-          <span class="footer-text">All rights reserved. Developed by Anton Stryzhavchuk</span>
+          <span class="footer-text">Всі права захищені. Розроблено Anton Stryzhavchuk</span>
         </p>
       </div>
     </div>
@@ -156,3 +156,4 @@
   <script src="../js/main.js"></script>
 </body>
 </html>
+
