--- a/galerie.html
+++ b/galerie.html
@@ -20,7 +20,7 @@
       </div>
       <div class="header-right">
         <div class="header-contact">
-          <span class="header-contact-phone">(819) 921-4333</span>
+          <span class="header-contact-phone">+1 (819) 921-4333</span>
           <a href="mailto:simon@prosimconstruction.com" class="header-contact-email">simon@prosimconstruction.com</a>
         </div>
         <div class="header-menu-wrapper">
@@ -33,6 +33,8 @@
         <li><a href="services.html">Services</a></li>
         <li><a href="galerie.html" class="active">Galerie</a></li>
         <li><a href="contact.html">Contact</a></li>
+        <li><a href="en/gallery.html" class="lang-switch">English</a></li>
+        <li><a href="uk/gallery.html" class="lang-switch">Українська</a></li>
           </ul>
         </div>
       </div>
@@ -45,12 +47,6 @@
   </nav>
 
   <main>
-    <header class="page-header">
-      <div class="container">
-        <p class="page-kicker">Travaux après-sinistre et rénovations</p>
-        <h1>Galerie</h1>
-      </div>
-    </header>
 
     <section class="section">
       <div class="container">
@@ -79,11 +75,21 @@
 
   <footer class="footer">
     <div class="container footer-inner">
-      <div class="footer-left">
-        <p>Prosim © 2025 | Tous droits réservés.</p>
+      <div class="footer-logo-section">
+        <div class="footer-logo-wrapper">
+          <a href="index.html" class="footer-logo"><span class="logo-pro">PR</span><span class="logo-o">O</span><span class="logo-sim">SIM</span></a>
+        </div>
+        <p class="footer-tagline">Après-sinistre et rénovation</p>
       </div>
-      <div class="footer-right">
+      <div class="footer-rbq">
         <p>RBQ: 5682‑7538‑01</p>
+      </div>
+      <div class="footer-divider"></div>
+      <div class="footer-bottom">
+        <p>
+          <span class="footer-brand">Prosim</span> © 2025 | 
+          <span class="footer-text">Tous droits réservés. Développé par Anton Stryzhavchuk</span>
+        </p>
       </div>
     </div>
   </footer>
