--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       </div>
       <div class="header-right">
         <div class="header-contact">
-          <span class="header-contact-phone">(819) 921-4333</span>
+          <span class="header-contact-phone">+1 (819) 921-4333</span>
           <a href="mailto:simon@prosimconstruction.com" class="header-contact-email">simon@prosimconstruction.com</a>
         </div>
         <div class="header-menu-wrapper">
@@ -37,6 +37,7 @@
             <li><a href="galerie.html">Galerie</a></li>
             <li><a href="contact.html">Contact</a></li>
             <li><a href="en/index.html" class="lang-switch">English</a></li>
+            <li><a href="uk/index.html" class="lang-switch">Українська</a></li>
           </ul>
         </div>
       </div>
@@ -134,12 +135,22 @@
 
   <footer class="footer">
     <div class="container footer-inner">
-      <div class="footer-left">
-        <p>Prosim © 2025 | Tous droits réservés.</p>
-        <p>Travaux après‑sinistre et rénovations à Gatineau et en Outaouais.</p>
+      <div class="footer-logo-section">
+        <div class="footer-logo-wrapper">
+          <a href="index.html" class="footer-logo"><span class="logo-pro">PR</span><span class="logo-o">O</span><span class="logo-sim">SIM</span></a>
+        </div>
+        <p class="footer-tagline">Après-sinistre et rénovation</p>
       </div>
-      <div class="footer-right">
+      <div class="footer-rbq">
         <p>RBQ: 5682‑7538‑01</p>
+      </div>
+      <div class="footer-divider"></div>
+      <div class="footer-bottom">
+        <p>
+          <span class="footer-brand">Prosim</span> © 2025 | 
+          <span class="footer-text">Tous droits réservés. Développé par Anton Stryzhavchuk</span> 
+          
+        </p>
       </div>
     </div>
   </footer>
