--- a/uk/gallery.html
+++ b/uk/gallery.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Contact - Prosim</title>
+  <title>Галерея - Prosim</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&family=Stencil&display=swap" rel="stylesheet">
@@ -16,7 +16,7 @@
         <div class="header-logo-wrapper">
           <a href="index.html" class="logo"><span class="logo-pro">PR</span><span class="logo-o">O</span><span class="logo-sim">SIM</span></a>
         </div>
-        <p class="logo-tagline">Post-disaster and renovation</p>
+        <p class="logo-tagline">Після аварії та ремонт</p>
       </div>
       <div class="header-right">
         <div class="header-contact">
@@ -28,13 +28,13 @@
             <span></span><span></span><span></span>
           </button>
           <ul class="nav-links">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="services.html">Services</a></li>
-        <li><a href="gallery.html">Gallery</a></li>
-        <li><a href="contact.html" class="active">Contact</a></li>
-        <li><a href="../contact.html" class="lang-switch">Français</a></li>
-        <li><a href="../uk/contact.html" class="lang-switch">Українська</a></li>
+        <li><a href="index.html">Головна</a></li>
+        <li><a href="about.html">Про нас</a></li>
+        <li><a href="services.html">Послуги</a></li>
+        <li><a href="gallery.html" class="active">Галерея</a></li>
+        <li><a href="contact.html">Контакти</a></li>
+        <li><a href="../galerie.html" class="lang-switch">Français</a></li>
+        <li><a href="../en/gallery.html" class="lang-switch">English</a></li>
           </ul>
         </div>
       </div>
@@ -49,37 +49,26 @@
   <main>
 
     <section class="section">
-      <div class="container contact-layout">
-        <div class="contact-info">
-          <h2>Contact Information</h2>
-          <p><strong>Phone:</strong> +1 (819) 921-4333</p>
-          <p><strong>Email:</strong> <a href="mailto:simon@prosimconstruction.com">simon@prosimconstruction.com</a></p>
-          <p class="small">
-            Prosim serves the Gatineau region and surrounding areas for post-disaster work and renovations.
-          </p>
+      <div class="container">
+        <h2>Після аварії</h2>
+        <div class="gallery-grid gallery-page">
+          <div class="gallery-item placeholder">Проект після аварії 1</div>
+          <div class="gallery-item placeholder">Проект після аварії 2</div>
+          <div class="gallery-item placeholder">Проект після аварії 3</div>
+          <div class="gallery-item placeholder">Проект після аварії 4</div>
         </div>
-        <form class="contact-form">
-          <div class="field">
-            <label for="name">Full Name</label>
-            <input type="text" id="name" name="name" required />
-          </div>
-          <div class="field">
-            <label for="email">Email</label>
-            <input type="email" id="email" name="email" required />
-          </div>
-          <div class="field">
-            <label for="tel">Phone</label>
-            <input type="tel" id="tel" name="tel" />
-          </div>
-          <div class="field">
-            <label for="message">Message</label>
-            <textarea id="message" name="message" rows="5" required></textarea>
-          </div>
-          <button type="submit" class="btn btn-primary">Send</button>
-          <p class="small">
-            This form is static. Connect it to your email sending solution (backend, third-party service, etc.).
-          </p>
-        </form>
+      </div>
+    </section>
+
+    <section class="section section-alt">
+      <div class="container">
+        <h2>Ремонти</h2>
+        <div class="gallery-grid gallery-page">
+          <div class="gallery-item placeholder">Ремонт 1</div>
+          <div class="gallery-item placeholder">Ремонт 2</div>
+          <div class="gallery-item placeholder">Ремонт 3</div>
+          <div class="gallery-item placeholder">Ремонт 4</div>
+        </div>
       </div>
     </section>
   </main>
@@ -90,7 +79,7 @@
         <div class="footer-logo-wrapper">
           <a href="index.html" class="footer-logo"><span class="logo-pro">PR</span><span class="logo-o">O</span><span class="logo-sim">SIM</span></a>
         </div>
-        <p class="footer-tagline">Post-disaster and renovation</p>
+        <p class="footer-tagline">Після аварії та ремонт</p>
       </div>
       <div class="footer-rbq">
         <p>RBQ: 5682‑7538‑01</p>
@@ -99,7 +88,7 @@
       <div class="footer-bottom">
         <p>
           <span class="footer-brand">Prosim</span> © 2025 | 
-          <span class="footer-text">All rights reserved. Developed by Anton Stryzhavchuk</span>
+          <span class="footer-text">Всі права захищені. Розроблено Anton Stryzhavchuk</span>
         </p>
       </div>
     </div>
@@ -108,3 +97,4 @@
   <script src="../js/main.js"></script>
 </body>
 </html>
+
