--- a/en/index.html
+++ b/en/index.html
@@ -49,7 +49,7 @@
   <header class="hero">
     <div class="container hero-inner">
       <div class="hero-text">
-        <p class="hero-kicker">Post-disaster work</p>
+        <p class="hero-kicker">Disaster recovery</p>
         <h1>and renovations in Gatineau</h1>
         <p class="hero-subtitle">
           Contact us now for complete post-disaster solutions and turnkey renovation projects.
